Add schema/code for deleting a todo item
