# schemas/swagger.yml
@@ -81,3 +81,21 @@ paths:
           description: generic error response
           schema:
             $ref: "#/definitions/error"
+  /{id}:
+    delete:
+      tags:
+        - todos
+      operationId: destroyOne
+      parameters:
+        - type: integer
+          format: int64
+          name: id
+          in: path
+          required: true
+      responses:
+        204:
+          description: deleted
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
